# DogeEdge

./: .gitignore  .vercelignore  Build DogeEdge Windows Desktop.bat  DOGEEDGE_ALGO_FACTORY.md  Install DogeEdge Dependencies.bat  PC_SETUP.md  README.md  Run DogeEdge Desktop.bat  Run DogeEdge PC Preview.bat  Run DogeEdge Tests.bat  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
api/kalshi/: doge-market.js  order-router.js  portfolio.js
artifacts/: cli-hardening-plan.md  exact-candidate-convergence-plan.md  patch-summary.md
artifacts/cli-audit-latest/: audit-report.json  audit-report.md  final-review.json  final-review.md  fold-diff.json  fold-diff.md  metrics-compare.csv  promotion-stages.mmd
data/local-worker/: README.md
public/: _headers  version.json
scripts/: codex-auto-improve.mjs  codex-auto-loop.mjs  dogeedge-backtest.mjs  dogeedge-local-worker.mjs  export-eval-snapshot.mjs  export-kalshi-trades.mjs  merge-safety-check.mjs  open-when-ready.mjs  run-eval-loop.mjs  start-dogeedge-runners-hidden.vbs  start-dogeedge-runners.ps1  write-build-version.mjs
scripts/factory/: archive-legacy-telemetry.mjs  audit-exports.mjs  backfill-linkage.mjs  build-replay-dataset.mjs  candidate-identity.mjs  capture-replay.mjs  data.mjs  drift.mjs  evidence-bootstrap.mjs  evidence-lane.mjs  evidence-loop.mjs  evidence-preflight.mjs  family-registry.mjs  fetch-historical-candles.mjs  fetch-official-settlements.mjs  (+25 more)
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+24 files in other folders)
