[package]
name = "dogeedge"
version = "0.1.0"
description = "Low-latency DOGE prediction-market workstation"
authors = ["DogeEdge"]
edition = "2021"

[lib]
name = "dogeedge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
